--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next export",   
     "start": "next start"
-  },
+},
   "dependencies": {
     "next": "10.1.3",
     "react": "17.0.2",
